--- a/src/templates/langchain/.env_dev
+++ b/src/templates/langchain/.env_dev
@@ -1,4 +1,11 @@
-TEXT_GENERATION_MODEL="gpt2"    # "mosaicml/mpt-7b-instruct" or "tiiuae/falcon-7b" or any model
-                                # from https://huggingface.co/spaces/HuggingFaceH4/open_llm_leaderboard based on your hardware
-TEXT_GENERATION_TEMPERATURE=0.5 # controls the randomness of language model. 0.1 to reduce creativity, with 1.0 you cat get really crazy and weird results.
-TEXT_GENERATION_DO_SAMPLE=True  # enables randomness of language model.
+# "mosaicml/mpt-7b-instruct" or "tiiuae/falcon-7b" or any model
+# from https://huggingface.co/spaces/HuggingFaceH4/open_llm_leaderboard based on your hardware
+TEXT_GENERATION_MODEL="gpt2"
+
+# controls the randomness of language model.
+# 0.1 - to reduce creativity.
+# 1.0 - you get more random results.
+TEXT_GENERATION_TEMPERATURE=0.5
+
+# enables randomness of language model.
+TEXT_GENERATION_DO_SAMPLE=True
