--- a/src/templates/llama/requirements.txt
+++ b/src/templates/llama/requirements.txt
@@ -1,5 +1,6 @@
 fastapi==0.100.0
-uvicorn[standard]==0.23.1
+llama-cpp-python==0.1.77
+pydantic-settings==2.0.2
 # dev
 ruff==0.0.280
 pytest==7.4.0
