--- a/src/templates/nlp/.env_dev
+++ b/src/templates/nlp/.env_dev
@@ -1,6 +1,19 @@
-SUMMARIZE_MODEL="t5-small"      # "facebook/bart-large-cnn"
-NER_MODEL="dslim/bert-base-NER" # "dslim/bert-large-NER"
-TEXT_GENERATION_MODEL="gpt2"    # "mosaicml/mpt-7b-instruct" or "tiiuae/falcon-7b" or any model
-                                # from https://huggingface.co/spaces/HuggingFaceH4/open_llm_leaderboard based on your hardware
-TEXT_GENERATION_TEMPERATURE=0.5 # controls the randomness of language model. 0.1 to reduce creativity, with 1.0 you cat get really crazy and weird results.
-TEXT_GENERATION_DO_SAMPLE=True  # enables randomness of language model.
+# or "facebook/bart-large-cnn" (most popular)
+# or any model from https://huggingface.co/models?pipeline_tag=summarization
+SUMMARIZE_MODEL="t5-small"
+
+# or "dslim/bert-large-NER" (one of the most popular)
+# or any model from https://huggingface.co/models?pipeline_tag=token-classification&sort=downloads
+NER_MODEL="dslim/bert-base-NER"
+
+# or "mosaicml/mpt-7b-instruct" or "tiiuae/falcon-7b"
+# or any model from https://huggingface.co/models?pipeline_tag=text-generation
+TEXT_GENERATION_MODEL="gpt2"
+
+# controls the randomness of language model.
+# 0.1 - to reduce creativity.
+# 1.0 - you get more random results.
+TEXT_GENERATION_TEMPERATURE=0.5
+
+# enables randomness of language model.
+TEXT_GENERATION_DO_SAMPLE=True
