--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,20 +3,30 @@ updates:
   - package-ecosystem: "pip"
     directory: "/"
     schedule:
-      interval: "weekly"
+      interval: "daily"
+    commit-message:
+      prefix: ⬆
   - package-ecosystem: "pip"
     directory: "src/templates/hello_world"
     schedule:
-      interval: "weekly"
+      interval: "daily"
+    commit-message:
+      prefix: ⬆
   - package-ecosystem: "pip"
     directory: "src/templates/langchain"
     schedule:
-      interval: "weekly"
+      interval: "daily"
+    commit-message:
+      prefix: ⬆
   - package-ecosystem: "pip"
     directory: "src/templates/nlp"
     schedule:
-      interval: "weekly"
+      interval: "daily"
+    commit-message:
+      prefix: ⬆
   - package-ecosystem: "pip"
     directory: "src/templates/llama"
     schedule:
-      interval: "weekly"
+      interval: "daily"
+    commit-message:
+      prefix: ⬆
