--- a/src/templates/langchain/requirements.txt
+++ b/src/templates/langchain/requirements.txt
@@ -4,6 +4,7 @@ python-dotenv==1.0.1
 torch==2.2.2
 uvicorn==0.29.0
 langchain==0.1.11
+langchain-community==0.0.34
 # dev
 ruff==0.4.1
 pytest==8.1.1
