--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,7 +37,7 @@ jobs:
       - uses: actions/download-artifact@v4
 
       - name: Publish distribution 📦 to PyPI
-        uses: pypa/gh-action-pypi-publish@master
+        uses: pypa/gh-action-pypi-publish@v1.9.0
         with:
           packages_dir: artifact/
           password: ${{ secrets.PYPI_API_TOKEN }}
