Replace gpt2 with openai-community/gpt2

--- a/src/templates/langchain/.env_dev
+++ b/src/templates/langchain/.env_dev
@@ -1,6 +1,6 @@
 # "mosaicml/mpt-7b-instruct" or "tiiuae/falcon-7b" or any model
 # from https://huggingface.co/spaces/HuggingFaceH4/open_llm_leaderboard based on your hardware
-TEXT_GENERATION_MODEL="gpt2"
+TEXT_GENERATION_MODEL="openai-community/gpt2"
 
 # controls the randomness of language model.
 # 0.1 - to reduce creativity.
