--- a/src/templates/nlp/.env_dev
+++ b/src/templates/nlp/.env_dev
@@ -8,7 +8,7 @@ NER_MODEL="dslim/bert-base-NER"
 
 # or "mosaicml/mpt-7b-instruct" or "tiiuae/falcon-7b"
 # or any model from https://huggingface.co/models?pipeline_tag=text-generation
-TEXT_GENERATION_MODEL="openai-community/gpt2"
+TEXT_GENERATION_MODEL="gpt2-medium"
 
 # controls the randomness of language model.
 # 0.1 - to reduce creativity.
