--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,8 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest]
-        python-version: ['3.10', '3.11']
+        python-version: ['3.11'] # '3.10', 
+      fail-fast: false
 
     steps:
       - uses: actions/checkout@v4
