--- a/src/templates/nlp/requirements.txt
+++ b/src/templates/nlp/requirements.txt
@@ -1,8 +1,9 @@
 fastapi==0.112.1
-transformers==4.42.4
+transformers[torch]==4.42.4
 pydantic-settings==2.4.0
 torch==2.4.0
 uvicorn==0.30.6
+accelerate==0.33.0
 # dev
 ruff==0.6.1
 pytest==8.3.2
