--- a/src/templates/nlp/.env_dev
+++ b/src/templates/nlp/.env_dev
@@ -6,14 +6,5 @@ SUMMARIZE_MODEL="t5-small"
 # or any model from https://huggingface.co/models?pipeline_tag=token-classification&sort=downloads
 NER_MODEL="dslim/bert-base-NER"
 
-# or "mosaicml/mpt-7b-instruct" or "tiiuae/falcon-7b"
 # or any model from https://huggingface.co/models?pipeline_tag=text-generation
-TEXT_GENERATION_MODEL="openai-community/gpt2"
-
-# controls the randomness of language model.
-# 0.1 - to reduce creativity.
-# 1.0 - you get more random results.
-TEXT_GENERATION_TEMPERATURE=0.5
-
-# enables randomness of language model.
-TEXT_GENERATION_DO_SAMPLE=True
+TEXT_GENERATION_MODEL="HuggingFaceTB/SmolLM-135M"
