--- a/src/templates/langchain/.env_dev
+++ b/src/templates/langchain/.env_dev
@@ -1,11 +1,2 @@
-# "mosaicml/mpt-7b-instruct" or "tiiuae/falcon-7b" or any model
 # from https://huggingface.co/spaces/HuggingFaceH4/open_llm_leaderboard based on your hardware
-TEXT_GENERATION_MODEL="openai-community/gpt2"
-
-# controls the randomness of language model.
-# 0.1 - to reduce creativity.
-# 1.0 - you get more random results.
-TEXT_GENERATION_TEMPERATURE=0.5
-
-# enables randomness of language model.
-TEXT_GENERATION_DO_SAMPLE=False
+TEXT_GENERATION_MODEL="HuggingFaceTB/SmolLM-135M"
