--- a/src/templates/nlp/.env_dev
+++ b/src/templates/nlp/.env_dev
@@ -2,7 +2,7 @@
 # or any model from https://huggingface.co/models?pipeline_tag=summarization
 SUMMARIZE_MODEL="t5-small"
 
-# or "dslim/bert-large-NER" (one of the most popular)
+# or "dslim/bert-base-NER" (one of the most popular)
 # or any model from https://huggingface.co/models?pipeline_tag=token-classification&sort=downloads
 NER_MODEL="dslim/bert-base-NER"
 
