--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest]
-        python-version: ["3.10", "3.11"]
+        python-version: ["3.11", "3.12"]
 
     steps:
       - uses: actions/checkout@v4
@@ -20,11 +20,6 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - uses: actions/cache@v4
-        id: cache
-        with:
-          path: ${{ env.pythonLocation }}
-          key: ${{ runner.os }}-python-${{ env.pythonLocation }}-${{ hashFiles('pyproject.toml') }}-test
       - name: Install dependencies
         if: steps.cache-python-env.outputs.cache-hit != 'true'
         run: |
@@ -37,18 +32,17 @@ jobs:
         run: |
           pip install -e .
           cd ../..
-      - name: Create project using default template
-        run: |
-          fastapi-gen hello_world
-          cd hello_world
-          make lint
-          make test
-          cd ..
+      # - name: Create project using default template
+      #   run: |
+      #     fastapi-gen hello_world
+      #     cd hello_world
+      #     make lint
+      #     make test
+      #     cd ..
       - name: Create project using "hello_world" template
         run: |
           fastapi-gen hello_world_v2 --template hello_world
           cd hello_world_v2
-          make lint
           make test
           cd ..
       - name: Create project using "nlp" template
