--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,4 @@ cython_debug/
 src/templates/**/.pytest_cache
 src/templates/**/__pycache__
 src/templates/**/venv
+src/templates/advanced/app.db
