--- a/src/templates/langchain/requirements.txt
+++ b/src/templates/langchain/requirements.txt
@@ -5,6 +5,7 @@ torch==2.7.1
 uvicorn==0.34.3
 langchain==0.3.26
 langchain-community==0.3.26
+langchain-core==0.3.66
 accelerate==1.8.1
 # dev
 ruff==0.12.0
