--- a/src/templates/langchain/requirements.txt
+++ b/src/templates/langchain/requirements.txt
@@ -6,8 +6,10 @@ uvicorn==0.34.3
 langchain==0.3.26
 langchain-community==0.3.26
 langchain-core==0.3.66
+langchain-huggingface==0.1.2
 accelerate==1.8.1
 # dev
 ruff==0.12.0
 pytest==8.4.1
+pytest-asyncio==0.24.0
 httpx==0.28.1
