feat: update llama template

--- a/src/templates/llama/.env_dev
+++ b/src/templates/llama/.env_dev
@@ -1,5 +1,5 @@
 # path to the local model
-LLM_MODEL="./models/gemma-2-2b-it.q8_0.gguf"
+LLM_MODEL="./models/gemma-3-1b-it-Q4_K_M.gguf"
 
 # controls the randomness of language model.
 # 0.1 - to reduce creativity.
