feat: update nlp template

--- a/src/templates/nlp/.env_dev
+++ b/src/templates/nlp/.env_dev
@@ -1,10 +1,37 @@
-# or "facebook/bart-large-cnn" (most popular)
-# or any model from https://huggingface.co/models?pipeline_tag=summarization
+# Text summarization models
+# Alternatives: "facebook/bart-large-cnn", "google/pegasus-xsum"
 SUMMARIZE_MODEL="t5-small"
 
-# or "dslim/bert-large-NER" (one of the most popular)
-# or any model from https://huggingface.co/models?pipeline_tag=token-classification&sort=downloads
+# Named Entity Recognition models  
+# Alternatives: "dslim/bert-large-NER", "dbmdz/bert-large-cased-finetuned-conll03-english"
 NER_MODEL="dslim/bert-base-NER"
 
-# or any model from https://huggingface.co/models?pipeline_tag=text-generation
+# Text generation models
+# Alternatives: "openai-community/gpt2", "microsoft/DialoGPT-small"
 TEXT_GENERATION_MODEL="HuggingFaceTB/SmolLM-135M"
+
+# Question Answering models
+# Alternatives: "distilbert/distilbert-base-uncased-distilled-squad"
+QA_MODEL="distilbert/distilbert-base-cased-distilled-squad"
+
+# Sentence embedding models
+# Alternatives: "sentence-transformers/all-mpnet-base-v2", "sentence-transformers/paraphrase-multilingual-MiniLM-L12-v2"
+EMBEDDING_MODEL="sentence-transformers/all-MiniLM-L6-v2"
+
+# Sentiment analysis models
+# Alternatives: "cardiffnlp/twitter-roberta-base-sentiment-latest"
+SENTIMENT_MODEL="distilbert/distilbert-base-uncased-finetuned-sst-2-english"
+
+# Zero-shot classification models
+# Using smaller model for better CI compatibility
+# Alternatives: "facebook/bart-large-mnli" (larger, better quality)
+ZERO_SHOT_MODEL="typeform/distilbert-base-uncased-mnli"
+
+# Device configuration (auto, cpu, cuda, mps)
+# For CI environments, explicitly set DEVICE="cpu"
+DEVICE="auto"
+
+# Model parameters
+MAX_LENGTH=512
+TEMPERATURE=0.7
+TOP_P=0.9
