--- a/src/templates/nlp/requirements.txt
+++ b/src/templates/nlp/requirements.txt
@@ -1,9 +1,11 @@
 fastapi==0.115.14
-transformers[torch]==4.46.3
+transformers[torch]==4.49.0
+sentence-transformers==3.3.1
+datasets==3.1.0
 pydantic-settings==2.10.1
 torch==2.7.1
-uvicorn==0.35.0
-accelerate==1.8.1
+uvicorn==0.34.0
+accelerate==1.2.1
 # dev
 ruff==0.12.1
 pytest==8.4.1
