--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -66,6 +66,10 @@ jobs:
           make test
           cd ..
       - name: Create project using "langchain" template
+        env:
+          PYTORCH_MPS_ENABLED: "0"
+          PYTORCH_ENABLE_MPS_FALLBACK: "1"
+          PYTORCH_MPS_HIGH_WATERMARK_RATIO: "0.0"
         run: |
           fastapi-gen langchain_app --template langchain
           cd langchain_app
