--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "schedule": [
-    "0 1 1 * *"
+    "on friday"
   ],
   "extends": [
     "config:recommended",
