--- a/src/templates/llama/Makefile
+++ b/src/templates/llama/Makefile
@@ -1,4 +1,4 @@
-.PHONY: init lint start test download
+.PHONY: install sync lint lint-fix test start build clean update download
 
 PORT=8000
 HOST=127.0.0.1
@@ -6,19 +6,39 @@ HOST=127.0.0.1
 MODEL_URL=https://huggingface.co/bartowski/SmolLM2-135M-Instruct-GGUF/resolve/main/SmolLM2-135M-Instruct-Q4_K_M.gguf
 OUTPUT_FILE=./models/SmolLM2-135M-Instruct-Q4_K_M.gguf
 
-init: requirements.txt download
-	test -d venv || python3 -m venv venv
-	. venv/bin/activate && pip install -r requirements.txt
+install: download
+	CMAKE_ARGS="-DLLAMA_METAL=OFF -DGGML_METAL=OFF -DGGML_BLAS=OFF -DGGML_CUBLAS=OFF -DGGML_OPENMP=OFF -DGGML_NATIVE=OFF" \
+	FORCE_CMAKE=1 \
+	python3 -m pip wheel --no-cache-dir --force-reinstall llama-cpp-python -w ./wheels
+
+	uv sync --group dev --find-links ./wheels
 	test -d .git || git init || true
 
+sync:
+	uv sync --group dev
+
 lint:
-	. venv/bin/activate && ruff check tests main.py
+	uv run ruff check tests main.py
+
+lint-fix:
+	uv run ruff check --fix tests main.py
 
 test:
-	. venv/bin/activate && pytest -vv .
+	uv run pytest -vv .
 
 start:
-	. venv/bin/activate && uvicorn main:app --reload --host $(HOST) --port $(PORT)
+	uv run uvicorn main:app --reload --host $(HOST) --port $(PORT)
+
+build:
+	uv build
+
+clean:
+	rm -rf dist/ build/ *.egg-info/ .pytest_cache/ .ruff_cache/
+
+update:
+	uv sync --upgrade
+
+init: install
 
 check-curl:
 	@if command -v curl &> /dev/null; then \
