--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,14 +13,17 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: actions/setup-python@v5
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
         with:
-          python-version: 3.13
+          version: "latest"
+          enable-cache: true
 
-      - run: |
-          pip install --upgrade pip    
-          pip install hatch
-          hatch build
+      - name: Set up Python
+        run: uv python install 3.13
+
+      - name: Build package
+        run: uv build
 
       - uses: actions/upload-artifact@v4
         with:
@@ -28,8 +31,8 @@ jobs:
           if-no-files-found: error
 
   pypi-publish:
-    needs: ['build']
-    environment: 'publish'
+    needs: ["build"]
+    environment: "publish"
 
     name: upload release to PyPI
     runs-on: ubuntu-latest
