--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,10 +17,12 @@ jobs:
         with:
           python-version: 3.13
 
-      - run: |
-          pip install --upgrade pip    
-          pip install hatch
-          hatch build
+      - name: Install uv
+        uses: astral-sh/setup-uv@v7
+
+      - name: Build package
+        run: |
+          uv build
 
       - uses: actions/upload-artifact@v4
         with:
@@ -28,8 +30,8 @@ jobs:
           if-no-files-found: error
 
   pypi-publish:
-    needs: ['build']
-    environment: 'publish'
+    needs: ["build"]
+    environment: "publish"
 
     name: upload release to PyPI
     runs-on: ubuntu-latest
