--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,10 +51,12 @@ jobs:
       id-token: write
     steps:
       - uses: actions/download-artifact@v5
+        with:
+          name: artifact
+          path: dist
 
       - name: Publish distribution 📦 to PyPI
         uses: pypa/gh-action-pypi-publish@v1.13.0
         with:
-          packages-dir: artifact/
           password: ${{ secrets.PYPI_API_TOKEN }}
           verbose: true
